# ai_learning

./: .gitignore
CarSegmentation/: dataset.py  model.py  train.py
HelmetDetection/: check_labels.py  dataset.py  vit_model.py  vit_train.py  yolov8_train.py
MIT 6.S183/note/: lecture1.md
Paper/1.Denoising Diffusion Probabilistic Models/: 学习笔记.md  文章整理.md  文章概述.md  阅读报告.md
Paper/2.DENOISING DIFFUSION IMPLICIT MODELS/: 学习笔记.md  文章整理.md
Paper/3.Auto-Encoding Variational Bayes/: 学习笔记.md  文章整理.md
Paper/4.U-Net Convolutional Networks for Biomedical Image Segmentation/: 学习笔记.md  文章整理.md
Paper/6.Diffusion Models Beat GANs on Image Synthesis/: 学习笔记.md
ddpm/: model.py
gpt/: bigram.py  interview_knowledge_base.md  interview_qa.json  mini_gpt.py  train.ipynb
makemore/: makemore.ipynb
micrograd/: micrograd.ipynb
resnet/: dataset.py  model.py
ucup/: .gitignore  README.md  pyproject.toml  requirements-unet.txt
ucup/scripts/: apply_same_sector_transfer.py  build_path_oof.py  build_rasters.py  evaluate_path_field.py  plot_predictions.py  submit_path_field_variants.py  train_and_submit.py  train_geometry_baseline.py  train_path_field.py  train_sparse_unet.py
ucup/src/ucup_rsrp/: __init__.py  data.py  geometry.py  modeling.py  oof.py  path_features.py  path_field.py  raster.py  sites.py  transfer.py  unet.py
ucup/src/ucup_rsrp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ucup/tests/: test_geometry.py  test_oof.py  test_path_field.py  test_raster.py  test_sites.py  test_transfer.py  test_unet.py
ucup/ucup_rsrp.egg-info/: SOURCES.txt
(+23 files in other folders)
