[project]
name = "ucup-rsrp"
version = "0.1.0"
description = "Physics-informed RSRP prediction for the 2026 UCup Summer Challenge"
requires-python = ">=3.12"
dependencies = [
    "lightgbm>=4.6,<5",
    "matplotlib>=3.10,<4",
    "numpy>=2.2,<3",
    "pandas>=2.2,<3",
    "scikit-learn>=1.6,<2",
    "scipy>=1.15,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "ruff>=0.11,<1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]

